Fixes announcement banner width on mobile.

--- a/aspc/static/css/base/header.mobile.css
+++ b/aspc/static/css/base/header.mobile.css
@@ -29,6 +29,7 @@
 
 	#announcement_banner {
 		position: relative;
+		width: auto;
 		margin-bottom: 5px;
 		box-shadow: 0px 0px 2px #222;
 		-webkit-box-shadow: 0px 0px 2px #222;
